fix test link modal input wrapping

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -54,6 +54,7 @@
     font-weight: 500;
     line-height: normal;
     max-width: 350px;
+    white-space: nowrap;
     overflow: auto;
 
     &::-webkit-scrollbar {
